--- a/src/site/xdoc/manual/layouts.xml.vm
+++ b/src/site/xdoc/manual/layouts.xml.vm
@@ -64,8 +64,11 @@
             <tr>
               <td>locationInfo</td>
               <td>boolean</td>
-              <td>If true, the filename and line number will be included in the HTML output. The default value is
-                false.</td>
+              <td><p>If true, the filename and line number will be included in the HTML output. The default value is
+                false.</p>
+                <p>Generating location info is an expensive operation and may impact
+                <a href="#LocationInformation">performance</a>. Use with caution.</p>
+                </td>
             </tr>
             <tr>
               <td>title</td>
@@ -208,6 +211,8 @@ WARN  [main]: Message 2</pre>
                   This conversion specifier can be optionally followed by<em>precision specifier</em>, that
                   follows the same rules as the logger name converter.
                 </p>
+                <p>Generating the class name of the caller is an expensive operation and may impact
+                <a href="#LocationInformation">performance</a>. Use with caution.</p>
               </td>
             </tr>
             <tr>
@@ -296,7 +301,9 @@ WARN  [main]: Message 2</pre>
                 <b>F</b><br />
                 <b>file</b>
               </td>
-              <td>Outputs the file name where the logging request was issued.
+              <td><p>Outputs the file name where the logging request was issued.</p>
+                <p>Generating the file information is an expensive operation and may impact
+                <a href="#LocationInformation">performance</a>. Use with caution.</p>
               </td>
             </tr>
             <tr>
@@ -493,6 +500,8 @@ WARN  [main]: Message 2</pre>
                   qualified name of the calling method followed by the callers source the file name and line
                   number between parentheses.
                 </p>
+                <p>Generating location information is an expensive operation and may impact
+                <a href="#LocationInformation">performance</a>. Use with caution.</p>
               </td>
             </tr>
             <tr>
@@ -500,8 +509,10 @@ WARN  [main]: Message 2</pre>
                 <b>L</b><br />
                 <b>line</b>
               </td>
-              <td>Outputs the line number from where the logging request
-                was issued.
+              <td><p>Outputs the line number from where the logging request
+                was issued.</p>
+                <p>Generating line number information is an expensive operation and may impact
+                <a href="#LocationInformation">performance</a>. Use with caution.</p>
               </td>
             </tr>
             <tr>
@@ -518,7 +529,9 @@ WARN  [main]: Message 2</pre>
                 <b>M</b><br />
                 <b>method</b>
               </td>
-              <td>Outputs the method name where the logging request was issued.
+              <td><p>Outputs the method name where the logging request was issued.</p>
+                <p>Generating the method name of the caller is an expensive operation and may impact
+                <a href="#LocationInformation">performance</a>. Use with caution.</p>
               </td>
             </tr>
             <tr>
@@ -1143,6 +1156,35 @@ at org.apache.logging.log4j.core.pattern.ExtendedThrowableTest.testException(Ext
           <p>Appenders using this layout should have their encoding set to UTF-8 or UTF-16, otherwise events containing
             non ASCII characters could result in corrupted log files.
           </p>
+        </subsection>
+        <a name="LocationInformation"/>
+        <subsection name="Location Information">
+        <p>
+			If one of the layouts is
+			configured with a location-related attribute like %line,
+			%location, %class or %method, Log4j will take a snapshot of the
+			stack, and walk the stack trace to find the location information.
+			This is an expensive operation: 1.3 - 5 times slower for
+			synchronous loggers. Synchronous loggers wait as
+			long as possible before they take this stack snapshot. If no
+			location is required, the snapshot will never be taken. However,
+			asynchronous loggers need to make this decision before passing the
+			log message to another thread; the location information will be
+			lost after that point.
+			</p><p>
+			The performance impact of taking a stack trace snapshot is even
+			higher for asynchronous loggers: logging with location is
+			4 - 20 times slower than without location.
+			For this reason, asynchronous loggers and asynchronous
+			appenders do not include location information by default.
+			
+			You can override the default behaviour in your logger 
+			or asynchronous appender configuration 
+			by specifying
+			<tt>includeLocation="true"</tt>.
+			</p>
+			<p>
+			</p>
         </subsection>
       </section>
     </body>
