Correct 'advertiser' example in docs, and change example to 'file://' - probably a little more common than advertising over http
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1481058 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -295,11 +295,11 @@ public class Bar {
           </p>
           <pre class="prettyprint linenums"><![CDATA[
 <?xml version="1.0" encoding="UTF-8"?>
-<configuration advertiser="org.apache.logging.log4j.core.net.MulticastDNSAdvertiser">
+<configuration advertiser="multicastdns">
 ...
 </configuration>
 <appenders>
-  <File name="File1" fileName="target/test.log" bufferedIO="false" advertiseURI="http://path/to/output.log" advertise="true">
+  <File name="File1" fileName="target/test.log" bufferedIO="false" advertiseURI="file://path/to/output.log" advertise="true">
   ...
   </File>
 </appenders>]]></pre>
