--- a/src/site/apt/download.apt.vm
+++ b/src/site/apt/download.apt.vm
@@ -20,7 +20,8 @@ Download Apache Log4j 2
 
 Download Apache Log4j 2
 
-  Apache Log4j 2 is distributed under the {{{http://www.apache.org/licenses/LICENSE-2.0.html} Apache License, version 2.0}}.
+  Apache Log4j 2 is distributed under the
+  {{{http://www.apache.org/licenses/LICENSE-2.0.html} Apache License, version 2.0}}.
 
   The link in the Mirrors column should display a list of available mirrors with a
   default selection based on your inferred location.  If you do not see that page,
@@ -43,9 +44,10 @@ Download Apache Log4j 2
     Please read {{{http://httpd.apache.org/dev/verification.html}Verifying Apache HTTP Server Releases}} for more
     information on why you should verify our releases.
 
-    The PGP signatures can be verified using PGP or GPG. First download the {{{http://www.apache.org/dist/logging/KEYS}KEYS}}
-    as well as the asc signature file for the relevant distribution. Make sure you get these files from the
-    {{{http://www.apache.org/dist/logging/}main distribution directory}}, rather than from a mirror. Then verify the signatures using
+    The PGP signatures can be verified using PGP or GPG. First download the
+    {{{http://www.apache.org/dist/logging/KEYS}KEYS}} as well as the asc signature file for the relevant distribution.
+    Make sure you get these files from the {{{http://www.apache.org/dist/logging/}main distribution directory}}, rather
+    than from a mirror. Then verify the signatures using
 
 ---
 % gpg --import KEYS
@@ -61,4 +63,17 @@ Download Apache Log4j 2
 
 * Previous Releases
 
-  All previous releases of Apache log4j can be found in the {{{http://archive.apache.org/dist/logging/log4j}archive repository}}.
+  All previous releases of Apache log4j can be found in the
+  {{{http://archive.apache.org/dist/logging/log4j}archive repository}}.
+
+* Using Log4J on your classpath
+
+  To use Log4j 2 in your application make sure that both the API and Core jars are in the application's classpath. Add
+  the dependencies listed below to your classpath.
+
+---
+log4j-api-${Log4jReleaseVersion}.jar
+log4j-core-${Log4jReleaseVersion}.jar
+---
+
+  You can do this from the command line or a manifest file.
