Upgrading from Jackson Mapper 1.9.11 to Jackson Data Processor 2.2.1.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1483407 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -593,19 +593,19 @@ public class Bar {
   }
 }</pre>
           <p>
-            The JSON support uses Jackson to parse the JSON files. These dependencies must be added to a project
-            that wants to use JSON for configuration:
+            The JSON support uses the Jackson Data Processor to parse the JSON files. These dependencies must be added
+            to a project that wants to use JSON for configuration:
           <pre class="prettyprint linenums"><![CDATA[
 <dependency>
-  <groupId>org.codehaus.jackson</groupId>
-  <artifactId>jackson-core-asl</artifactId>
-  <version>1.9.2</version>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-core</artifactId>
+  <version>2.2.1</version>
 </dependency>
 
 <dependency>
-  <groupId>org.codehaus.jackson</groupId>
-  <artifactId>jackson-mapper-asl</artifactId>
-  <version>1.9.2</version>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-databind</artifactId>
+  <version>2.2.1</version>
 </dependency>]]></pre>
           </p>
         <a name="Loggers"/>
