--- a/src/site/apt/download.apt.vm
+++ b/src/site/apt/download.apt.vm
@@ -66,7 +66,7 @@ Download Apache Log4j 2
   All previous releases of Apache log4j can be found in the
   {{{http://archive.apache.org/dist/logging/log4j}archive repository}}.
 
-* Using Log4J on your classpath
+* Using Log4j on your classpath
 
   To use Log4j 2 in your application make sure that both the API and Core jars are in the application's classpath. Add
   the dependencies listed below to your classpath.
