--- a/src/site/xdoc/maven-artifacts.xml.vm
+++ b/src/site/xdoc/maven-artifacts.xml.vm
@@ -25,7 +25,7 @@
   <body>
     <section name="Maven and Ivy Artifacts">
 
-      <subsection name="Using Log4J in your Apache Maven build">
+      <subsection name="Using Log4j in your Apache Maven build">
         <p>
           To build with <a href="http://maven.apache.org/">Apache Maven</a>, add the dependencies listed below to your
           <code>pom.xml</code> file.
@@ -45,7 +45,7 @@
 </dependencies>
 ]]></pre>
       </subsection>
-      <subsection name="Using Log4J in your Apache Ivy build">
+      <subsection name="Using Log4j in your Apache Ivy build">
         <p>
           To build with <a href="https://ant.apache.org/ivy/">Apache Ivy</a>, add the dependencies listed below to your
           <code>ivy.xml</code> file.
