Add missing file name headers to POM and Ivy XML examples.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1493800 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/maven-artifacts.xml.vm
+++ b/src/site/xdoc/maven-artifacts.xml.vm
@@ -30,6 +30,7 @@
           To build with <a href="http://maven.apache.org/">Apache Maven</a>, add the dependencies listed below to your
           <code>pom.xml</code> file.
         </p>
+        <code>pom.xml</code>
         <pre class="prettyprint linenums"><![CDATA[
 <dependencies>
   <dependency>
@@ -50,6 +51,7 @@
           To build with <a href="https://ant.apache.org/ivy/">Apache Ivy</a>, add the dependencies listed below to your
           <code>ivy.xml</code> file.
         </p>
+        <code>ivy.xml</code>
         <pre class="prettyprint linenums"><![CDATA[
 <dependencies>
   <dependency org="org.apache.logging.log4j" name="log4j-api" rev="${Log4jReleaseVersion}" />
