--- a/src/site/xdoc/maven-artifacts.xml.vm
+++ b/src/site/xdoc/maven-artifacts.xml.vm
@@ -64,8 +64,8 @@
           Log4j 2.x contains several optional components that can be included in an application.
         </p>
         <h4>Log4j 1.x API Bridge</h4>
-        <p>If there are existing components that are written to use Log4j 1.x and it is desired to have this
-          logging routed to Log4j 2 then remove any log4j 1.x dependencies and add the following.
+        <p>If existing components use Log4j 1.x and you want to have this logging routed to Log4j 2, 
+          then remove any log4j 1.x dependencies and add the following.
         </p>
         <code>pom.xml</code>
         <pre class="prettyprint linenums"><![CDATA[
@@ -84,9 +84,8 @@
 </dependencies>
 ]]></pre>
         <h4>Apache Commons Logging Bridge</h4>
-        <p>Commons Logging is used in many components as a way of letting applications choose the specific
-          logging implementation. To route logging from those components into Log4j 2 include the
-          following dependency and do not remove the Commons Logging jar.
+        <p>If existing components use Apache Commons Logging 1.x and you want to have this logging routed to Log4j 2, 
+          then add the following but do not remove any Commons Logging 1.x dependencies.
         </p>
         <code>pom.xml</code>
         <pre class="prettyprint linenums"><![CDATA[
@@ -105,8 +104,8 @@
 </dependencies>
 ]]></pre>
         <h4>SLF4J Bridge</h4>
-        <p>SLF4J is another popular logging API that may be bound to Log4j 2 by including the following
-          dependency along with the SLF4J dependencies.
+        <p>If existing components use SLF4J and you want to have this logging routed to Log4j 2, then add the 
+          following but do not remove any SLF4J dependencies.
         </p>
         <code>pom.xml</code>
         <pre class="prettyprint linenums"><![CDATA[
